--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
             - name: List changed files
               run: |
                   for file in ${{ steps.changed-files.outputs.changed_files }}; do
-                       fileSet: !!set"{$file}" 
-                       echo "$fileSet was changed"
+                       fileSet: !!set"${{$file}}" 
+                       echo "$file was changed"
                   done
+                  echo "$fileSet was changed"
