--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
             - name: List changed files
               run: |
                   for file in ${{ steps.changed-files.outputs.changed_files }}; do
-                       fileSet: !!set{{file}}
+                       fileSet=$(file);
                        echo "$file was changed"
                   done
                   echo "$fileSet was changed"
