Update and rename main.yml to test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,8 @@ jobs:
                     do
                         if [[ $file = *test || $file = *Test ]]
                             then 
-                                var fileSet=["$file"];
+                                #var fileSet=["$file"];
+                                var fileSet=["basename${file}"];
                                 echo "$file was changed";
                         fi
                     done
