--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,7 +58,7 @@ jobs:
             - name: 'Populate auth file with DEVHUB_SFDX_URL secret'
               shell: bash
               run: |
-                      echo ${{ secrets.DEVHUB_SFDX_URL }} > ./DEVHUB_SFDX_URL.txt
+                      echo ${{ secrets.SFDX_URL}} > ./DEVHUB_SFDX_URL.txt
                       secretFileSize=$(wc -c "./DEVHUB_SFDX_URL.txt" | awk '{print $1}')
                       if [ $secretFileSize == 1 ]; then
                           echo "Missing DEVHUB_SFDX_URL secret. Is this workflow running on a fork?";
