--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ on:
          branches:
             - master
          paths:
-            - 'force-app/**
+            - 'force-app/**'
 # Jobs to be executed
 jobs:
     # Dummy job used to skip CI run on automated PRs  my-job:
