--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,7 +45,7 @@ jobs:
                  declare -a fileSet    
                  for file in ${{ steps.changed-files.outputs.changed_files }}
                     do
-                                fileSet=["${file##}"];
+                                fileSet=["${file##*}"];
                                 echo "$file was changed";
                         
                     done
