--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,5 +62,6 @@ jobs:
               shell: bash
               run: |
                   echo ${{ secrets.SFDX_SECRET}}
+                  echo ${{ env.SFDX_URL}}
                     
            
