--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,8 +17,7 @@ jobs:
     # Dummy job used to skip CI run on automated PRs  my-job:
       my-job:
         runs-on: ubuntu-latest
-        env : 
-            name : Develop
+        environment: develop 
         steps: 
             - name: Noop
               run: |
