--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -70,7 +70,7 @@ jobs:
                   fi
 
             - name: 'Authenticate Dev Hub'
-              run: sf org login sfdx-url -f ./DEVHUB_SFDX_URL.txt -f ./authFile.json
+              run: sf org login sfdx-url -f ./DEVHUB_SFDX_URL.txt ./authFile.json
 
             - name: 'Run Apex tests'
               run: sf apex test run -c -r human 
