--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,14 +63,14 @@ jobs:
               shell: bash
               run: |
                   echo ${{ vars.DEVHUB_SFDX_DEVELOP_URL }} > ./DEVHUB_SFDX_URL.txt
-                  secretFileSize=$(wc -c "./SalesforceCICD/DEVHUB_SFDX_URL.txt" | awk '{print $1}')
+                  secretFileSize=$(wc -c "SalesforceCICD/DEVHUB_SFDX_URL.txt" | awk '{print $1}')
                   if [ $secretFileSize == 1 ]; then
                       echo "Missing DEVHUB_SFDX_URL secret. Is this workflow running on a fork?";
                       exit 1;
                   fi
 
             - name: 'Authenticate Dev Hub'
-              run: sf org login sfdx-url --sfdx-url-file "./SalesforceCICD/DEVHUB_SFDX_URL.txt ./SalesforceCICD/authFile.json"
+              run: sf org login sfdx-url --sfdx-url-file "SalesforceCICD/DEVHUB_SFDX_URL.txt SalesforceCICD/authFile.json"
 
             - name: 'Run Apex tests'
               run: sf apex test run -c -r human 
