--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,7 +71,7 @@ jobs:
                   fi
 
             - name: 'Authenticate Dev Hub'
-              run: sf org login sfdx-url --sfdx-url-file SalesforceCICD/authFile.json
+              run: sf org login sfdx-url -f ./DEVHUB_SFDX_URL.txt -a devhub -d
 
             - name: 'Run Apex tests'
               run: sf apex test run -c -r human 
