--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ name: Hello World
 
 # Definition when the workflow should run
 on:
+    workflow_dispatch:
     pull_request:
          types: [opened, edited, synchronize, reopened]
 
