--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,11 @@ jobs:
             - name: Get changed files
               id: changed-files
               run: |
-                echo "changed_files=$(git diff --name-only -r HEAD^1 HEAD | xargs)" >> $GITHUB_OUTPUT
+                 echo "changed_files=$(git diff --name-only -r HEAD^1 HEAD | xargs)" >> $GITHUB_OUTPUT
+                 changed_filesformat=$(git diff --name-only -r HEAD^1 HEAD | xargs)
                  declare -a fileSet 
                  declare -a fileSetApex 
-                 for file in ${{changed_files }}
+                 for file in ${{changed_filesformat }}
                     do  
                         fileSetApex=[`basename ${file%.*}`];
                         if [[ $file = *test || $file = *Test ]]
