--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+
 # Unique name for this workflow
 name: Pull Request Workflow
 
@@ -10,7 +11,7 @@ on:
 # Jobs to be executed
 jobs:
     # Dummy job used to skip CI run on automated PRs  my-job:
-      my-job:
+      setupjob:
         runs-on: ubuntu-latest
         environment: develop 
         steps: 
@@ -23,12 +24,9 @@ jobs:
               id: changed-files
               run: |
                  echo "changed_files=$(git diff --name-only -r HEAD^1 HEAD | xargs)" >> $GITHUB_OUTPUT
-            
-            - name: List changed files
-              run: |
                  declare -a fileSet 
                  declare -a fileSetApex 
-                 for file in ${{ steps.changed-files.outputs.changed_files }}
+                 for file in $(git diff --name-only -r HEAD^1 HEAD | xargs)
                     do  
                         fileSetApex=[`basename ${file%.*}`];
                         if [[ $file = *test || $file = *Test ]]
