--- a/.github/workflows/prdocker.yml
+++ b/.github/workflows/prdocker.yml
@@ -18,7 +18,15 @@ jobs:
               uses: actions/checkout@v4
               with:
                   fetch-depth: 2
-                  
+            - name: Run the build process with Docker
+              uses: addnab/docker-run-action@v3
+              with:
+                  image: aschmelyun/cleaver:latest
+                  options: -v ${{ github.workspace }}
+                  run: |
+                    echo "Running Script"
+                   
+
             - name: Get changed files
               id: changed-files
               run: |
