--- a/.github/workflows/prdocker.yml
+++ b/.github/workflows/prdocker.yml
@@ -24,6 +24,7 @@ jobs:
                   image: nishantwavhal/nishantcli:0.0.1
                   options: -v ${{ github.workspace }}
                   run: |
+                    npm start
                     nishant-cli gen-sfdx --commandtype file --commandname getComponentFileMap               
 
             - name: Get changed files
