--- a/.github/workflows/prdocker.yml
+++ b/.github/workflows/prdocker.yml
@@ -22,10 +22,12 @@ jobs:
               uses: addnab/docker-run-action@v3
               with:
                   image: nishantwavhal/nishantcli:0.0.1
-                  options: -v ${{ github.workspace }}
+                  options: -v ${{ github.workspace }}:/bin
                   run: |
+                    npm ci
+                    npm rebuild
                     npm start
-                    shant-cli gen-sfdx --commandtype file --commandname getComponentFileMap               
+                    nishant-cli gen-sfdx --commandtype file --commandname getComponentFileMap               
 
             - name: Get changed files
               id: changed-files
