--- a/.github/workflows/prdocker.yml
+++ b/.github/workflows/prdocker.yml
@@ -22,7 +22,7 @@ jobs:
               uses: addnab/docker-run-action@v3
               with:
                   image: nishantwavhal/nishantcli:0.0.1
-                  options: -v ${{ github.workspace }}:/bin
+                  options: -v ${{ github.workspace }}:/usr/src/app
                   run: |
                     npm rebuild
                     npm start
