--- a/.github/workflows/prdocker.yml
+++ b/.github/workflows/prdocker.yml
@@ -22,11 +22,10 @@ jobs:
               uses: addnab/docker-run-action@v3
               with:
                   image: nishantwavhal/nishantcli:0.0.1
-                  options: -v ${{ github.workspace }}
                   run: |
                     npm start
-                    node shant-cli gen-sfdx --commandtype file --commandname getComponentFileMap
-                    node nishant-cli gen-sfdx --commandtype file --commandname getComponentFileMap   
+                    node /bin/nishantcli.js shant-cli gen-sfdx --commandtype file --commandname getComponentFileMap
+                    node /bin/nishantcli.js nishant-cli gen-sfdx --commandtype file --commandname getComponentFileMap   
 
             - name: Get changed files
               id: changed-files
