--- a/.github/workflows/prdocker.yml
+++ b/.github/workflows/prdocker.yml
@@ -24,8 +24,13 @@ jobs:
                   image: nishantwavhal/nishantcli:0.0.1
                   run: |
                     npm start
+                    npm rebuild
                     node /bin/nishantcli.js shant-cli gen-sfdx --commandtype file --commandname getComponentFileMap
-                    node /bin/nishantcli.js nishant-cli gen-sfdx --commandtype file --commandname getComponentFileMap   
+                    node /bin/nishantcli.js nishant-cli gen-sfdx --commandtype file --commandname getComponentFileMap 
+                    /bin/nishantcli.js shant-cli gen-sfdx --commandtype file --commandname getComponentFileMap
+                    /bin/nishantcli.js nishant-cli gen-sfdx --commandtype file --commandname getComponentFileMap  
+                    shant-cli gen-sfdx --commandtype file --commandname getComponentFileMap
+                    nishant-cli gen-sfdx --commandtype file --commandname getComponentFileMap   
 
             - name: Get changed files
               id: changed-files
