--- a/.github/workflows/prdocker.yml
+++ b/.github/workflows/prdocker.yml
@@ -25,7 +25,18 @@ jobs:
                   run: |
                     npm start
                     shant-cli gen-sfdx --commandtype file --commandname getComponentFileMap
-                    nishant-cli gen-sfdx --commandtype file --commandname getComponentFileMap   
+                    nishant-cli gen-sfdx --commandtype file --commandname getComponentFileMap  
+            - name: 'Get Authorization Details'
+              shell: bash
+              run: |
+                  echo ${{ secrets.DEVHUB_SFDX_DEVELOP_SECRET }} > ./DEVHUB_SFDX_URL.txt                 
+                  secretFileSize=$(wc -c "SalesforceCICD/DEVHUB_SFDX_URL.txt" | awk '{print $1}')
+                  if [ $secretFileSize == 1 ]; then
+                      echo "Missing DEVHUB_SFDX_URL secret. Is this workflow running on a fork?";
+                      exit 1;
+                  fi
+            - name: 'Authenticate Dev Hub'
+              run: sf org login sfdx-url -f ./DEVHUB_SFDX_URL.txt -a devhub -d
 
             - name: Get changed files
               id: changed-files
