--- a/.github/workflows/prdocker.yml
+++ b/.github/workflows/prdocker.yml
@@ -23,7 +23,7 @@ jobs:
               with:
                   image: nishantwavhal/nishantcli:0.0.2
                   run: |
-                    node nishant-cli gen-sfdx --commandtype file --commandname getComponentFileMap
+                    node bin/nishant-cli.js gen-sfdx --commandtype file --commandname getComponentFileMap
             - name: 'Get Authorization Details'
               shell: bash
               run: |
