--- a/.github/workflows/prdockermain.yml
+++ b/.github/workflows/prdockermain.yml
@@ -15,6 +15,8 @@ jobs:
         container:
          image: nishantwavhal/nishantcli:0.0.3
         steps:
+            - name:  Run Component SF command
+              run: sf --version 
             - name: Run Component File Map Command
               run:  node bin/nishant-cli.js gen-sfdx --commandtype file --commandname getComponentFileMap
             - name:  Run Component SF command
